- Repository Test Case 만듦 - 파편화된 beginTime, endTime을 ParticipleTime으로 모아서 처리 - Converter에 null이 들어갈 경우 처리 - 잘못된 함수 고침